2005-12-15 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the ATtiny24/44/84 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATtiny24/44/84.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iotn24.h: new file.
	* include/avr/iotn44.h: new file.
	* include/avr/iotn84.h: new file.
	* include/avr/iotnx4.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATtiny24/44/84.
	* doc/api/using-tools.dox: (Ditto.)

2005-12-14 Anatoly Sokolov <aesok@post.ru>

	* /include/avr/iocanxx.h (IVSE): Rename in IVSEL.
	[Fixed bug #15161]

2005-12-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frank Behrens:
	* include/util/delay.h: fix inlining of the delay functions.
	Fix from bug #15161: util/delay.h misses inline keyword (regression).

2005-12-11 Anatoly Sokolov <aesok@post.ru>

	* /libm/fplib/fp_powerseries.S: Use __addsf3/__mulsf3/__divsf3 
	instead __addsf3x/__mulsf3x/__divsf3x.
	* /libm/fplib/asin.S (table_asin): Change constants to ieee format.
	* /libm/fplib/atan.S (.Ltable_atan): (Ditto.).
	* /libm/fplib/exp.S (table_exp): (Ditto.).
	* /libm/fplib/fp_cosinus.S (table_cos): (Ditto.).
	* /libm/fplib/log.S (table_log): (Ditto.).
	* /libm/fplib/tan.S (table_tan): (Ditto.).

2005-12-06 Anatoly Sokolov <aesok@post.ru>

	* /libm/fplib/Files.am: Include new files.
	* /libm/fplib/divsf3.S (__fp_inverse): Move to ...
	* /libm/fplib/fp_inverse.S: ... new file.
	* /libm/fplib/mulsf3.S (square): Move to ...
	* /libm/fplib/square.S: ... new file.

2005-12-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add a new demo project ("largedemo").
	* doc/examples/largedemo/Makefile: New file.
	* doc/examples/largedemo/largedemo.c: New file.
	* doc/examples/largedemo/largedemo.dox: New file.
	* doc/api/doxygen.config.in: Wire the largedemo into the build.
	* doc/examples/Makefile.am: (Ditto.)
	* doc/examples/all-demos.dox: Add some blurb for largedemo.
