@@ -52,7 +52,7 @@
     <td>ADC_vect</td>
     <td>SIG_ADC</td>
     <td>ADC Conversion Complete</td>
-    <td>AT90S2333, AT90S4433, AT90S4434, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny15, ATtiny26, ATtiny45</td>
+    <td>AT90S2333, AT90S4433, AT90S4434, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny15, ATtiny26, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>ANALOG_COMP_0_vect</td>
@@ -82,7 +82,7 @@
     <td>ANA_COMP_vect</td>
     <td>SIG_COMPARATOR</td>
     <td>Analog Comparator</td>
-    <td>AT90S1200, AT90S2313, AT90S2333, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, ATmega16, ATmega161, ATmega162, ATmega163, ATmega32, ATmega323, ATmega8, ATmega8515, ATmega8535, ATtiny11, ATtiny12, ATtiny13, ATtiny15, ATtiny2313, ATtiny26, ATtiny28, ATtiny45</td>
+    <td>AT90S1200, AT90S2313, AT90S2333, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, ATmega16, ATmega161, ATmega162, ATmega163, ATmega32, ATmega323, ATmega8, ATmega8515, ATmega8535, ATtiny11, ATtiny12, ATtiny13, ATtiny15, ATtiny2313, ATtiny26, ATtiny28, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>CANIT_vect</td>
@@ -100,7 +100,7 @@
     <td>EE_RDY_vect</td>
     <td>SIG_EEPROM_READY</td>
     <td>EEPROM Ready</td>
-    <td>AT90S2333, AT90S4433, AT90S4434, AT90S8535, ATmega16, ATmega161, ATmega162, ATmega163, ATmega32, ATmega323, ATmega8, ATmega8515, ATmega8535, ATtiny12, ATtiny13, ATtiny15, ATtiny26, ATtiny45</td>
+    <td>AT90S2333, AT90S4433, AT90S4434, AT90S8535, ATmega16, ATmega161, ATmega162, ATmega163, ATmega32, ATmega323, ATmega8, ATmega8515, ATmega8535, ATtiny12, ATtiny13, ATtiny15, ATtiny26, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>EE_READY_vect</td>
@@ -112,7 +112,7 @@
     <td>INT0_vect</td>
     <td>SIG_INTERRUPT0</td>
     <td>External Interrupt 0</td>
-    <td>AT90S1200, AT90S2313, AT90S2323, AT90S2333, AT90S2343, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega161, ATmega162, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8515, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny11, ATtiny12, ATtiny13, ATtiny15, ATtiny22, ATtiny2313, ATtiny26, ATtiny28, ATtiny45</td>
+    <td>AT90S1200, AT90S2313, AT90S2323, AT90S2333, AT90S2343, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega161, ATmega162, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8515, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny11, ATtiny12, ATtiny13, ATtiny15, ATtiny22, ATtiny2313, ATtiny26, ATtiny28, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>INT1_vect</td>
@@ -184,13 +184,13 @@
     <td>PCINT0_vect</td>
     <td>SIG_PIN_CHANGE0</td>
     <td>Pin Change Interrupt Request 0</td>
-    <td>ATmega162, ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny45</td>
+    <td>ATmega162, ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>PCINT1_vect</td>
     <td>SIG_PIN_CHANGE1</td>
     <td>Pin Change Interrupt Request 1</td>
-    <td>ATmega162, ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644</td>
+    <td>ATmega162, ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny24, ATtiny44, ATtiny84</td>
   </tr>
   <tr>
     <td>PCINT2_vect</td>
@@ -268,37 +268,37 @@
     <td>TIM0_COMPA_vect</td>
     <td>SIG_OUTPUT_COMPARE0A</td>
     <td>Timer/Counter Compare Match A</td>
-    <td>ATtiny13, ATtiny45</td>
+    <td>ATtiny13, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIM0_COMPB_vect</td>
     <td>SIG_OUTPUT_COMPARE0B</td>
     <td>Timer/Counter Compare Match B</td>
-    <td>ATtiny13, ATtiny45</td>
+    <td>ATtiny13, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIM0_OVF_vect</td>
     <td>SIG_OVERFLOW0</td>
     <td>Timer/Counter0 Overflow</td>
-    <td>ATtiny13, ATtiny45</td>
+    <td>ATtiny13, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIM1_COMPA_vect</td>
     <td>SIG_OUTPUT_COMPARE1A</td>
-    <td>Timer/Counter1 Compare Match 1A</td>
-    <td>ATtiny45</td>
+    <td>Timer/Counter1 Compare Match A</td>
+    <td>ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIM1_COMPB_vect</td>
     <td>SIG_OUTPUT_COMPARE1B</td>
     <td>Timer/Counter1 Compare Match B</td>
-    <td>ATtiny45</td>
+    <td>ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIM1_OVF_vect</td>
     <td>SIG_OVERFLOW1</td>
     <td>Timer/Counter1 Overflow</td>
-    <td>ATtiny45</td>
+    <td>ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>TIMER0_COMPA_vect</td>
@@ -346,7 +346,7 @@
     <td>TIMER1_CAPT_vect</td>
     <td>SIG_INPUT_CAPTURE1</td>
     <td>Timer/Counter Capture Event</td>
-    <td>AT90S2333, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega161, ATmega162, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8515, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny2313</td>
+    <td>AT90S2333, AT90S4414, AT90S4433, AT90S4434, AT90S8515, AT90S8535, AT90PWM3, AT90PWM2, AT90CAN128, AT90CAN32, AT90CAN64, ATmega103, ATmega128, ATmega16, ATmega161, ATmega162, ATmega163, ATmega165, ATmega169, ATmega32, ATmega323, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega64, ATmega645, ATmega6450, ATmega649, ATmega6490, ATmega8, ATmega8515, ATmega8535, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny2313, ATtiny24, ATtiny44, ATtiny84</td>
   </tr>
   <tr>
     <td>TIMER1_CMPA_vect</td>
@@ -724,13 +724,13 @@
     <td>USI_OVF_vect</td>
     <td>SIG_USI_OVERFLOW</td>
     <td>USI Overflow</td>
-    <td>ATtiny26, ATtiny45</td>
+    <td>ATtiny26, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>USI_START_vect</td>
     <td>SIG_USI_START</td>
     <td>USI Start Condition</td>
-    <td>ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATtiny2313, ATtiny45</td>
+    <td>ATmega165, ATmega169, ATmega325, ATmega3250, ATmega329, ATmega3290, ATmega645, ATmega6450, ATmega649, ATmega6490, ATtiny2313, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
   <tr>
     <td>USI_STRT_vect</td>
@@ -748,7 +748,7 @@
     <td>WDT_vect</td>
     <td>SIG_WDT, SIG_WATCHDOG_TIMEOUT</td>
     <td>Watchdog Timeout Interrupt</td>
-    <td>AT90PWM3, AT90PWM2, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny45</td>
+    <td>AT90PWM3, AT90PWM2, ATmega168, ATmega48, ATmega88, ATmega640, ATmega1280, ATmega1281, ATmega324, ATmega164, ATmega644, ATtiny13, ATtiny24, ATtiny44, ATtiny84, ATtiny45, ATtiny25, ATtiny85</td>
   </tr>
 </table>
 </small>
